# One-Shield

./: .gitignore  CHANGELOG-v1.0.md  DEMO_SCRIPT.md  DEPLOY.md  DEPLOYMENT.md  FAST_DEMO.md  PHASE_11_TASKS.md  PHASE_12_13_TESTS.md  PHASE_12_TASKS.md  PHASE_13_TASKS.md  PHASE_14_TASKS.md  PHASE_15_TASKS.md  README.md  ROADMAP_V2.0.md  ROADMAP_v2.3.md  ROADMAP_v2.5.md  package-lock.json
cloud-server/: .env.example  .gitignore  Cargo.toml  README.md  RUNSERVER.md  docker-compose.yml  init.sql
cloud-server/dashboard/: .env.example  index.html  nginx.conf  package-lock.json  package.json
cloud-server/dashboard/src/: App.css  App.jsx  main.jsx
cloud-server/dashboard/src/components/: EmptyState.css  EmptyState.jsx
cloud-server/dashboard/src/context/: OrgContext.jsx
cloud-server/dashboard/src/pages/: Dashboard.css  Dashboard.jsx  Login.css  Login.jsx  Register.css  Register.jsx  Tokens.jsx  Users.css  Users.jsx
cloud-server/dashboard/src/services/: api.js
cloud-server/dashboard/src/styles/: index.css  tokens.css
cloud-server/src/: config.rs  db.rs  error.rs  main.rs
cloud-server/src/handlers/: agent.rs  auth.rs  endpoints.rs  health.rs  incidents.rs  mod.rs  organization.rs  policies.rs  reports.rs  tokens.rs
cloud-server/src/middleware/: auth.rs
cloud-server/src/models/: baseline.rs  endpoint.rs  incident.rs  mod.rs  organization.rs  policy.rs  token.rs  user.rs
core-service/: .env.example  Cargo.toml  tauri.conf.json
core-service/capabilities/: default.json
core-service/models/: model.onnx
core-service/python-runtime/: README.md
core-service/src/: constants.rs  main.rs
core-service/src/api/: advanced_detection.rs  cloud_sync.rs  commands.rs  engine_status.rs  enterprise.rs  mod.rs
core-service/src/api/v1/: mod.rs
core-service/src/logic/: action_guard.rs  ai_bridge.rs  analysis_loop.rs  baseline.rs  collector.rs  config.rs  events.rs  guard.rs  mod.rs
core-service/src/logic/advanced_detection/: amsi.rs  iat_analysis.rs  injection.rs  injection_types.rs  keylogger.rs  memory.rs  memory_types.rs  mod.rs  types.rs
core-service/src/logic/baseline/: audit.rs  drift.rs  history.rs  mod.rs  quarantine.rs  storage.rs  tests.rs  types.rs  validate.rs
core-service/src/logic/behavioral_sigs/: beaconing.rs  mod.rs  never_learn.rs  persistence.rs  rules.rs  types.rs
core-service/src/logic/cloud_sync/: client.rs  mod.rs  sync.rs
core-service/src/logic/dataset/: export.rs  mod.rs  record.rs  tests.rs  writer.rs
core-service/src/logic/enterprise/: agent.rs  api.rs  mod.rs  policy_sync.rs  rbac.rs  reporting.rs  (+1 more)
(+112 files in other folders)
