[package]
name = "oneshield-cloud"
version = "0.1.0"
edition = "2021"
authors = ["OneOne404 <oneone404@github.com>"]
description = "One-Shield Cloud Backend - Central Management Server"
license = "MIT"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
