[package]
name = "ai-security-core"
version = "0.1.0"
edition = "2021"
description = "AI Security App - Core Service"
authors = ["AI Security Team"]

[dependencies]
# Tauri Framework
tauri = { version = "2.5", features = [] }
tauri-plugin-shell = "2"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encryption (AES-256 for Model Protection)
aes-gcm = "0.10"
rand = "0.8"

# Hashing (for Checksum)
sha2 = "0.10"
hex = "0.4"

# Logging
log = "0.4"
env_logger = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System info for metrics
sysinfo = "0.30"

# File watching
notify = "6.0"

# SQLite database for logs
rusqlite = { version = "0.31", features = ["bundled"] }

# Better synchronization primitives
parking_lot = "0.12"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# ONNX Runtime for native ML inference
ort = "2.0.0-rc.10"

# N-dimensional arrays for tensor handling
ndarray = "0.16"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
strip = true
